--- a/src/App.css
+++ b/src/App.css
@@ -1,16 +1,15 @@
-.App {
-  text-align: center;
+.social-links {
+  margin-top: 20px;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+.social-links a {
+  display: inline-block;
+  margin-right: 20px;
+  color: #333;
+  text-decoration: none;
 }
 
+.social-links a:hover {
+  color: #007bff; /* Change to your preferred hover color */
+}
 
