--- a/src/App.css
+++ b/src/App.css
@@ -1,15 +1,38 @@
-.social-links {
-  margin-top: 20px;
+.App {
+  text-align: center;
 }
 
-.social-links a {
-  display: inline-block;
-  margin-right: 20px;
-  color: #333;
-  text-decoration: none;
+.App-logo {
+  height: 40vmin;
+  pointer-events: none;
 }
 
-.social-links a:hover {
-  color: #007bff; /* Change to your preferred hover color */
+@media (prefers-reduced-motion: no-preference) {
+  .App-logo {
+    animation: App-logo-spin infinite 20s linear;
+  }
 }
 
+.App-header {
+  background-color: #282c34;
+  min-height: 100vh;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  font-size: calc(10px + 2vmin);
+  color: white;
+}
+
+.App-link {
+  color: #61dafb;
+}
+
+@keyframes App-logo-spin {
+  from {
+    transform: rotate(0deg);
+  }
+  to {
+    transform: rotate(360deg);
+  }
+}
