--- a/src/App.css
+++ b/src/App.css
@@ -7,10 +7,8 @@
   pointer-events: none;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.Intro {
+  max-width: 50%;
 }
 
 .App-header {
@@ -19,6 +17,7 @@
   display: flex;
   flex-direction: column;
   align-items: center;
+  font-family: Marcellus;
   justify-content: center;
   font-size: calc(10px + 2vmin);
   color: white;
