--- a/src/App.css
+++ b/src/App.css
@@ -66,15 +66,11 @@
 }
 
 .page-footer {
-	position: block;
+	display: none;
 }
 
 .page-footer::before {
-	content: "";
-	position: absolute;
-	left: 0;
-	right: 0;
-	border-top: 2px solid var(--tertiary-color);
+	display: none;
 }
 
 @media (max-width: 1270px) {
